--- a/SISMistico/CapaPresentacion/Formularios/FormsPedido/DatosMesaSmall.resx
+++ b/SISMistico/CapaPresentacion/Formularios/FormsPedido/DatosMesaSmall.resx
@@ -120,27 +120,26 @@
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
   <data name="btnCancelarPedido.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAReSURBVFhHrVdJT1NRFO5fMLpQ/4DzUuMCtKV9JR1QWgYBDWGQBQnIwgVDggRYOSJGNhh3TujP
-        UECgzEIUMeCwoC2vaARUROv31fvqffR1tF9yk0fvOee799wzYUoXg3b70WGbrc7nct2ZKCh4xMXvYUW5
-        OGqxHBFi2QUID425XPd9TuenufLywIempp/+1taw2tERWfz+cOnSz7mysgBlfG73vSG7/aBQzxwvFGX/
-        mNP5dMrj8fvb2sKbt26Fv/X0JFyU4YGgE4Jnnvny8/cJc+lhLD+/aNztDqy0tPwyIkpl+Zubt2ljRFE8
-        wmxqgBu7Z0tL1fXr12OMbty4EV5pbg4vNzb+WKipCWGpy/X16zho+Ou1azHy/G22pEQddTi6hPnEIPnr
-        ysovO90d6uoKvyorC2J/Cat3yGarGMzLO/XSZssZysvzIEbu4PdFxEgw1Nmp06Ut2kx6CLqdN5fJ+f2m
-        qmoNsTA5aLUeF6JxQZkxh2P6XV3d152HmC0uVkfs9kIhqgcDju8lu3H96tXwlNer+hyOy0IsKUas1t2j
-        TudCoK1tWz4AF22TwzAw4cJncsDxxCQfsdlcQiQpEpFri4GJpxoQKn/BPJ/0eoOyIN2ejZvz753PMenx
-        BHV1YhxFhnmuCTDg+OZiOykSkfN3XGRaDkzWCRYroR6J/E9y4DHaUwk4Ihk595ElJ5gd2t7GzZu84MeI
-        AaTTMZbX6CbynKkW2UyCVMiFqAmE7+S6MnfuXCDSO9hEUMe3tA0WFOa00IuLdMiJcafzrh+2Nbn3jY1b
-        qCHVJnYyvom2sdzQ8B0uKxd6hkiXnABZ0VJ9/YYmy8NAttfEdrp65UrUyEJtrTqkKKeFXgye5+TswhPN
-        G5D/QgF66zOb9whRHXCo3IXqalWTX21vZ014EHsA1HaWV6GnQ6bkxEur1bJYWxvSdKIHiHkCNBbWdqEX
-        RSZulzFstZ5nA9P0yAm92ykF4f+SE/Bcn3zRaBByxOIko22wXkN4UehlhZxAGr5nimv65MSzHI5sglBX
-        iFg0WIiyRY6bnoTNVU1fV4gIznuye1g2WT6zQU6AbGatuztqgymIUtwvtlEN0Rgww+maERtINsgh34rM
-        +izbmSosDL6wWA4Ikb/AMwywVcqC8sro5opyZqqoSN2EyzU7GOe24fHHQuQfOCSMFxT4jea6TG9Ocg41
-        mh1+T7jd/lGzea8Q04PTKwdIOSC5+ByMCXY1IRoXDDh4c4Zul29OmzMYyTD2nRWixgBRl+FQisCcr6gI
-        sqth3WVth0dyWbaRThdw4z6mGqNdDjgu2hJDaaegSQxOr/SE0XOwpTJj2FhYttk7UFR+8Dc5z6PycDtv
-        njK5Bk6vHCATBWayxYDjmyd1ezwwMOHWJ5jhAoGWlt8sIEZE8qIM83wa/5ph1BuIG3DpgHWCMxwrJsY1
-        P/453SIJuygXv9lPpH9O+2PyPFtg/UYA1iDoekH0kIvfbCycroVYijCZ/gAWThg1LuvK2QAAAABJRU5E
-        rkJggg==
+        iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAABGdBTUEAALGPC/xhBQAABF5JREFUWEet
+        V0lPU1EU7l8wulD/gPNS4wK0pX0lHVBaBgENYZAFCcjCBUOCBFg5IkY2GHdO6M9QQKDMQhQx4LCgLa9o
+        BFRE6/fV++p99HW0X3KTR+8557v33DNhSheDdvvRYZutzudy3ZkoKHjExe9hRbk4arEcEWLZBQgPjblc
+        931O56e58vLAh6amn/7W1rDa0RFZ/P5w6dLPubKyAGV8bve9Ibv9oFDPHC8UZf+Y0/l0yuPx+9vawpu3
+        boW/9fQkXJThgaATgmee+fLz9wlz6WEsP79o3O0OrLS0/DIiSmX5m5u3aWNEUTzCbGqAG7tnS0vV9evX
+        Y4xu3LgRXmluDi83Nv5YqKkJYanL9fXrOGj467VrMfL8bbakRB11OLqE+cQg+evKyi873R3q6gq/KisL
+        Yn8Jq3fIZqsYzMs79dJmyxnKy/MgRu7g90XESDDU2anTpS3aTHoIup03l8n5/aaqag2xMDlotR4XonFB
+        mTGHY/pdXd3XnYeYLS5WR+z2QiGqBwOO7yW7cf3q1fCU16v6HI7LQiwpRqzW3aNO50KgrW1bPgAXbZPD
+        MDDhwmdywPHEJB+x2VxCJCkSkWuLgYmnGhAqf8E8n/R6g7Ig3Z6Nm/Pvnc8x6fEEdXViHEWGea4JMOD4
+        5mI7KRKR83dcZFoOTNYJFiuhHon8T3LgMdpTCTgiGTn3kSUnmB3a3sbNm7zgx4gBpNMxltfoJvKcqRbZ
+        TIJUyIWoCYTv5Loyd+5cINI72ERQx7e0DRYU5rTQi4t0yIlxp/OuH7Y1ufeNjVuoIdUmdjK+ibax3NDw
+        HS4rF3qGSJecAFnRUn39hibLw0C218R2unrlStTIQm2tOqQop4VeDJ7n5OzCE80bkP9CAXrrM5v3CFEd
+        cKjchepqVZNfbW9nTXgQewDUdpZXoadDpuTES6vVslhbG9J0ogeIeQI0FtZ2oRdFJm6XMWy1nmcD0/TI
+        Cb3bKQXh/5IT8FyffNFoEHLE4iSjbbBeQ3hR6GWFnEAavmeKa/rkxLMcjmyCUFeIWDRYiLJFjpuehM1V
+        TV9XiAjOe7J7WDZZPrNBToBsZq27O2qDKYhS3C+2UQ3RGDDD6ZoRG0g2yCHfisz6LNuZKiwMvrBYDgiR
+        v8AzDLBVyoLyyujminJmqqhI3YTLNTsY57bh8cdC5B84JIwXFPiN5rpMb05yDjWaHX5PuN3+UbN5rxDT
+        g9MrB0g5ILn4HIwJdjUhGhcMOHhzhm6Xb06bMxjJMPadFaLGAFGX4VCKwJyvqAiyq2HdZW2HR3JZtpFO
+        F3DjPqYao10OOC7aEkNpp6BJDE6v9ITRc7ClMmPYWFi22TtQVH7wNznPo/JwO2+eMrkGTq8cIBMFZrLF
+        gOObJ3V7PDAw4dYnmOECgZaW3ywgRkTyogzzfBr/mmHUG4gbcOmAdYIzHCsmxjU//jndIgm7KBe/2U+k
+        f077Y/I8W2D9RgDWIOh6QfSQi99sLJyuhViKMJn+ABZOGDUu68rZAAAAAElFTkSuQmCC
 </value>
   </data>
   <data name="btnCambiarMesa.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
@@ -169,42 +168,66 @@
   </data>
   <data name="btnEditarPedido.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAAAOUAAADlAY/lmzwAAAAZdEVYdFNvZnR3YXJlAHd3dy5pbmtzY2FwZS5vcmeb7jwa
-        AAAB1UlEQVRYR82XPU7DQBCF3cERoKelwBYdAlqOwH24A+koIBYiVBQBisSyCxRxBCQkUCRQBGmMwk+1
-        zPNPYntfJIcs2Vj6Emc9M29iz86uHaVULTba7ZWtzvmB2/UbQuh2/Af5/khIz0Ncgw1sWQwGHSziRafr
-        XtA8luCxoGoSwwe+LGYROgj2g5NV+WdHbrc5IgI1EV+JgVhMA9DB7eBiTQL09IB/poeYTEsb8MKzTa/r
-        90mQuUBMxK7qlX4gy/8Qz0Hs6p0YnyTPvOZt341a6vD+usRO2KK2hF6xJsYJpAVHHTRuBk/iUj6uXh+p
-        LUW0xGWSAKbLLNUevPWhWTpuB8/UltMc5VM0TSCd58SQM38CUg+iKW5O0uFkYJYmYyQBIYa2k7VXZjAV
-        QwkoaDtygt5ODaZhKgGhgQSwiGgXMdVQ7RCr8v7zlclOjsH3J7VFDMRiGkKI6YeVTLuIuW3qQCymAW3c
-        ASyp2sWFJCDaS5DAEjwCWoR70WVSRHfDF40hKUIUJrNFDMRiGoIUoe1paL0RWW/F4mt3McKH9eUYYJPA
-        jXWMb0iA9S0ZsLopzbG6Lc9BluJk58UkJ6mJpDAtvJoVwXTJ+sRiX06roGtlbdvg67lyfgEhl0zWaupb
-        tgAAAABJRU5ErkJggg==
+        iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAA
+        5AAAAOQBXaJ52AAAABl0RVh0U29mdHdhcmUAd3d3Lmlua3NjYXBlLm9yZ5vuPBoAAAHVSURBVFhHzZc9
+        TsNAEIXdwRGgp6XAFh0CWo7AfbgD6SggFiJUFAGKxLILFHEEJCRQJFAEaYzCT7XM809ie18khyzZWPoS
+        Zz0zb2LPzq4dpVQtNtrtla3O+YHb9RtC6Hb8B/n+SEjPQ1yDDWxZDAYdLOJFp+te0DyW4LGgahLDB74s
+        ZhE6CPaDk1X5Z0dutzkiAjURX4mBWEwD0MHt4GJNAvT0gH+mh5hMSxvwwrNNr+v3SZC5QEzEruqVfiDL
+        /xDPQezqnRifJM+85m3fjVrq8P66xE7YoraEXrEmxgmkBUcdNG4GT+JSPq5eH6ktRbTEZZIApsss1R68
+        9aFZOm4Hz9SW0xzlUzRNIJ3nxJAzfwJSD6Ipbk7S4WRgliZjJAEhhraTtVdmMBVDCShoO3KC3k4NpmEq
+        AaGBBLCIaBcx1VDtEKvy/vOVyU6OwfcntUUMxGIaQojph5VMu4i5bepALKYBbdwBLKnaxYUkINpLkMAS
+        PAJahHvRZVJEd8MXjSEpQhQms0UMxGIaghSh7WlovRFZb8Xia3cxwof15Rhgk8CNdYxvSID1LRmwuinN
+        sbotz0GW4mTnxSQnqYmkMC28mhXBdMn6xGJfTquga2Vt2+DruXJ+ASGXTNZq6lu2AAAAAElFTkSuQmCC
 </value>
   </data>
   <data name="btnFacturar.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAAALEAAACxAcYtSY0AAAAZdEVYdFNvZnR3YXJlAHd3dy5pbmtzY2FwZS5vcmeb7jwa
-        AAAERklEQVRYR7WXe1BUVRzH97/C0abGacb+qGmmh9WYAam4vJR4SaFD0zg4U63XQLI1iJfLYyFkgUUh
-        EpWFXRCJxzhmY+qmOU2Z0jRljSQGNA09tsc0k1lMgJTK5rfzO3CXe3fPva5Bf3xmds+e/X0/99zzuNcA
-        ICiy38UtJrc3RXJ7nYxeyT05vNHtHSfo81Sb10l9qK+ohghho5LnDuMu6Zi3hRUfYyBIxug/9F9RTSXC
-        RkI6jVs3uSerWbEJv+I3wwSvwWqJMghho3QCi6R3vGcFBf8bVIvVFGUFNEhHrz668Zj3Z2GhWcBrstr+
-        eaovZPl/hMvw2n4jMRPO7tOcDrsWlKGYEz6B6Qkn/hPjwsUB/DTax/n6ty+wft+IsF8wUJZKgC+1G8z2
-        3//6jHX9iHP5yseIfLFvNhIT8hLlAtPrXNQRqXuP46ndR3Bx7MyMwN9nsKqkE7GlHXhwmxMPW/dxHipp
-        w2KLCw8UNOO+Vxy4P6cFG7rHhXUpkwvQrsUaNDeZ+JomxNka8OufH8wIXDnN24g7MvIwP2Et5senqklK
-        w8IMC6LN57UkxijbML29ijpwghEIeTwKIeFGFfNWxHIB4+ZzmhKUbWAfaG8P+FFGFth1ohutpw5wmt7r
-        UQlQWMjyaBXzjHE+AR0JJwnQIeL/g48EuwNPVL2uycLMfE3uzCz2CWhI9DIBfpIpGxVcQ27XW4xDmsgj
-        oYUx63Mdiclhw9Rx6h88RcaREXUYu+L1ja1Isu/G0w0tWFOxA0teLkJorhWPvFSI8PxyLM7KUwlEmntV
-        AkoJytYV2Hz4R5WAqbkDWW09kJydyGztxiZHO4ylNYiy2rGypBpRZbWIKK5SCUTnnAwQkCXSu8YndG/B
-        lkODKoFEeyPS97QhZcdePLPLhVRbPZbmlCAsrwxLtlqwrLCCj4RSIKbgbaEAEZs7cFV3EpoPnlUJPNvU
-        zq/8ecd+vODqgonJrGRXTKOwosiGSDYSy7dtVwnEFvUIw4k4y1cjusvQtP8UTC429I4uSC1vCAktqhJj
-        seOxwnqE5bYKw4mkV7+9oLsRJdd3IrWuCWmvNWtyb3apJndvLcaiDJswnEiu/L5adysmAZp0ytugpObo
-        SX47lEOuJMJaqykQbe6/vm7npQW6h9GNBN789Bwajr8vDCf0BBLLhgcoW/c4TrR3+JaeFhSixVKLTShA
-        R3mSzRPhEyBEDyTxlQexutylCwXocU9mY4BAcuV3H8q5PgHRIxntVrRh+BeYDavyBi+va7+0IECASwge
-        SudSIia73/tknSdUmakSIESP5XMhEWXu/2ftTk+af57qi4zoxWQ2Eqvzh8aT634IF2UFNMiIXs1uVoLP
-        9vJvPknZ88dtogxC2KjE/+U0GAkKZut8MKX2lzBRTSXCRhHK1/P0jtE+NqEmKShyy/nrMTlfXosrGBpN
-        sA4PranxVKRt99wuqhEIDP8Cn07LUajvq3MAAAAASUVORK5CYII=
+        iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAA
+        sAAAALABFGqraQAAABl0RVh0U29mdHdhcmUAd3d3Lmlua3NjYXBlLm9yZ5vuPBoAAARGSURBVFhHtZd7
+        UFRVHMf3v8LRpsZpxv6oaaaH1ZgBqbi8lHhJoUPTODhTrddAsjWIl8tjIWSBRSESlYVdEInHOGZj6qY5
+        TZnSNGWNJAY0DT22xzSTWUyAlMrmt/M7cJd7d8+9rkF/fGZ2z579fT/33PO41wAgKLLfxS0mtzdFcnud
+        jF7JPTm80e0dJ+jzVJvXSX2or6iGCGGjkucO4y7pmLeFFR9jIEjG6D/0X1FNJcJGQjqNWze5J6tZsQm/
+        4jfDBK/BaokyCGGjdAKLpHe8ZwUF/xtUi9UUZQU0SEevPrrxmPdnYaFZwGuy2v55qi9k+X+Ey/DafiMx
+        E87u05wOuxaUoZgTPoHpCSf+E+PCxQH8NNrH+fq3L7B+34iwXzBQlkqAL7UbzPbf//qMdf2Ic/nKx4h8
+        sW82EhPyEuUC0+tc1BGpe4/jqd1HcHHszIzA32ewqqQTsaUdeHCbEw9b93EeKmnDYosLDxQ0475XHLg/
+        pwUbuseFdSmTC9CuxRo0N5n4mibE2Rrw658fzAhcOc3biDsy8jA/YS3mx6eqSUrDwgwLos3ntSTGKNsw
+        vb2KOnCCEQh5PAoh4UYV81bEcgHj5nOaEpRtYB9obw/4UUYW2HWiG62nDnCa3utRCVBYyPJoFfOMcT4B
+        HQknCdAh4v+DjwS7A09Uva7Jwsx8Te7MLPYJaEj0MgF+kikbFVxDbtdbjEOayCOhhTHrcx2JyWHD1HHq
+        HzxFxpERdRi74vWNrUiy78bTDS1YU7EDS14uQmiuFY+8VIjw/HIszspTCUSae1UCSgnK1hXYfPhHlYCp
+        uQNZbT2QnJ3IbO3GJkc7jKU1iLLasbKkGlFltYgorlIJROecDBCQJdK7xid0b8GWQ4MqgUR7I9L3tCFl
+        x148s8uFVFs9luaUICyvDEu2WrCssIKPhFIgpuBtoQARmztwVXcSmg+eVQk829TOr/x5x3684OqCicms
+        ZFdMo7CiyIZINhLLt21XCcQW9QjDiTjLVyO6y9C0/xRMLjb0ji5ILW8ICS2qEmOx47HCeoTltgrDiaRX
+        v72guxEl13cita4Jaa81a3Jvdqkmd28txqIMmzCcSK78vlp3KyYBmnTK26Ck5uhJfjuUQ64kwlqrKRBt
+        7r++buelBbqH0Y0E3vz0HBqOvy8MJ/QEEsuGByhb9zhOtHf4lp4WFKLFUotNKEBHeZLNE+ETIEQPJPGV
+        B7G63KULBehxT2ZjgEBy5Xcfyrk+AdEjGe1WtGH4F5gNq/IGL69rv7QgQIBLCB5K51IiJrvf+2SdJ1SZ
+        qRIgRI/lcyERZe7/Z+1OT5p/nuqLjOjFZDYSq/OHxpPrfggXZQU0yIhezW5Wgs/28m8+Sdnzx22iDELY
+        qMT/5TQYCQpm63wwpfaXMFFNJcJGEcrX8/SO0T42oSYpKHLL+esxOV9eiysYGk2wDg+tqfFUpG333C6q
+        EQgM/wKfTstRqO+rcwAAAABJRU5ErkJggg==
+</value>
+  </data>
+  <data name="btnPrecuenta.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAA
+        rwAAAK8BK7AVuQAAABl0RVh0U29mdHdhcmUAd3d3Lmlua3NjYXBlLm9yZ5vuPBoAAARGSURBVFhHtZd7
+        UFRVHMf3v8LRpsZpxv6oaaaH1ZgBqbi8lHhJoUPTODhTrddAsjWIl8tjIWSBRSESlYVdEInHOGZj6qY5
+        TZnSNGWNJAY0DT22xzSTWUyAlMrmt/M7cJd7d8+9rkF/fGZ2z579fT/33PO41wAgKLLfxS0mtzdFcnud
+        jF7JPTm80e0dJ+jzVJvXSX2or6iGCGGjkucO4y7pmLeFFR9jIEjG6D/0X1FNJcJGQjqNWze5J6tZsQm/
+        4jfDBK/BaokyCGGjdAKLpHe8ZwUF/xtUi9UUZQU0SEevPrrxmPdnYaFZwGuy2v55qi9k+X+Ey/DafiMx
+        E87u05wOuxaUoZgTPoHpCSf+E+PCxQH8NNrH+fq3L7B+34iwXzBQlkqAL7UbzPbf//qMdf2Ic/nKx4h8
+        sW82EhPyEuUC0+tc1BGpe4/jqd1HcHHszIzA32ewqqQTsaUdeHCbEw9b93EeKmnDYosLDxQ0475XHLg/
+        pwUbuseFdSmTC9CuxRo0N5n4mibE2Rrw658fzAhcOc3biDsy8jA/YS3mx6eqSUrDwgwLos3ntSTGKNsw
+        vb2KOnCCEQh5PAoh4UYV81bEcgHj5nOaEpRtYB9obw/4UUYW2HWiG62nDnCa3utRCVBYyPJoFfOMcT4B
+        HQknCdAh4v+DjwS7A09Uva7Jwsx8Te7MLPYJaEj0MgF+kikbFVxDbtdbjEOayCOhhTHrcx2JyWHD1HHq
+        HzxFxpERdRi74vWNrUiy78bTDS1YU7EDS14uQmiuFY+8VIjw/HIszspTCUSae1UCSgnK1hXYfPhHlYCp
+        uQNZbT2QnJ3IbO3GJkc7jKU1iLLasbKkGlFltYgorlIJROecDBCQJdK7xid0b8GWQ4MqgUR7I9L3tCFl
+        x148s8uFVFs9luaUICyvDEu2WrCssIKPhFIgpuBtoQARmztwVXcSmg+eVQk829TOr/x5x3684OqCicms
+        ZFdMo7CiyIZINhLLt21XCcQW9QjDiTjLVyO6y9C0/xRMLjb0ji5ILW8ICS2qEmOx47HCeoTltgrDiaRX
+        v72guxEl13cita4Jaa81a3Jvdqkmd28txqIMmzCcSK78vlp3KyYBmnTK26Ck5uhJfjuUQ64kwlqrKRBt
+        7r++buelBbqH0Y0E3vz0HBqOvy8MJ/QEEsuGByhb9zhOtHf4lp4WFKLFUotNKEBHeZLNE+ETIEQPJPGV
+        B7G63KULBehxT2ZjgEBy5Xcfyrk+AdEjGe1WtGH4F5gNq/IGL69rv7QgQIBLCB5K51IiJrvf+2SdJ1SZ
+        qRIgRI/lcyERZe7/Z+1OT5p/nuqLjOjFZDYSq/OHxpPrfggXZQU0yIhezW5Wgs/28m8+Sdnzx22iDELY
+        qMT/5TQYCQpm63wwpfaXMFFNJcJGEcrX8/SO0T42oSYpKHLL+esxOV9eiysYGk2wDg+tqfFUpG333C6q
+        EQgM/wKfTstRqO+rcwAAAABJRU5ErkJggg==
 </value>
   </data>
 </root>
